Add body-purple part to the index.html

--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
             </ul>
         </div>
     </div>
+    <div class="body-purple">
+        <h1>This website is awesome</h1>
+        This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+        <div class="button">Sign up</div>
+        <div class="placeholder">this is a placeholder for image</div>
+    </div>
 </body>
 </html>
