Add body-white part to index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,28 @@
         <h1>This website is awesome</h1>
         This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
         <div class="button">Sign up</div>
-        <div class="placeholder">this is a placeholder for image</div>
+        <div class="placeholder">this is a placeholder for an image</div>
+    </div>
+    <div class="body-white">
+        <h2>Some random information.</h2>
+        <div class="container">
+            <div class="card">
+                <div class="square"></div>
+                this is some subtext under an illustration or image
+            </div>
+            <div class="card">
+                <div class="square"></div>
+                this is some subtext under an illustration or image
+            </div>
+            <div class="card">
+                <div class="square"></div>
+                this is some subtext under an illustration or image
+            </div>
+            <div class="card">
+                <div class="square"></div>
+                this is some subtext under an illustration or image
+            </div>
+        </div>
     </div>
 </body>
 </html>
