--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="button">Sign up</div>
         <div class="placeholder">this is a placeholder for an image</div>
     </div>
-    <div class="body-white">
+    <div class="body-information">
         <h2>Some random information.</h2>
         <div class="container">
             <div class="card">
