Add body-signup part to index.html

--- a/index.html
+++ b/index.html
@@ -51,5 +51,12 @@
         </div>
         <h3>-Thor, God of Thunder</h3>
     </div>
+    <div class="body-signup">
+        <div class="column">
+            <h3>Call to action! It's time!</h3>
+            Sign up for our product by clicking that button right over there!
+            <div class="button latter">Sign up</div>
+        </div>
+    </div>
 </body>
 </html>
