--- a/index.html
+++ b/index.html
@@ -58,5 +58,8 @@
             <div class="button latter">Sign up</div>
         </div>
     </div>
+    <div class="footer">
+        Copyright ©︎ The Odin Project 2021
+    </div>
 </body>
 </html>
