Add body part to style.css & set header logo to h3

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo">Header Logo</div>
+        <h3>Header Logo</h3>
         <div class="right-link">
             <ul>
                 <li><a href="">header link one</a></li>
