--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
+    <div class="header purple">
         <h3>Header Logo</h3>
-        <div class="right-link">
-            <ul>
+        <ul class="right-link">
                 <li><a href="">header link one</a></li>
                 <li><a href="">header link two</a></li>
                 <li><a href="">header link three</a></li>
-            </ul>
-        </div>
+        </ul>
     </div>
-    <div class="body-purple">
-        <h1>This website is awesome</h1>
-        This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
-        <div class="button">Sign up</div>
+    <div class="purple hero">
+        <div class="left-hero">
+            <h1>This website is<br>awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <div class="button">Sign up</div>
+        </div>
         <div class="placeholder">this is a placeholder for an image</div>
     </div>
-    <div class="body-information">
+    <div class="body information">
         <h2>Some random information.</h2>
         <div class="container">
             <div class="card">
                 <div class="square"></div>
-                this is some subtext under an illustration or image
+                <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="card">
                 <div class="square"></div>
@@ -45,21 +45,21 @@
             </div>
         </div>
     </div>
-    <div class="body-gray">
+    <div class="body gray">
         <div class="quote">
-            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         </div>
         <h3>-Thor, God of Thunder</h3>
     </div>
-    <div class="body-signup">
+    <div class="body signup">
         <div class="column">
             <h3>Call to action! It's time!</h3>
-            Sign up for our product by clicking that button right over there!
+            <p>Sign up for our product by clicking that button right over there!</p>
             <div class="button latter">Sign up</div>
         </div>
     </div>
     <div class="footer">
-        Copyright ©︎ The Odin Project 2021
+        <p>Copyright ©︎ The Odin Project 2021</p>
     </div>
 </body>
 </html>
