Add gray to style.css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container">
             <div class="card">
                 <div class="square"></div>
-                <p>this is some subtext under an illustration or image</p>
+                this is some subtext under an illustration or image
             </div>
             <div class="card">
                 <div class="square"></div>
