Add footer to style.css

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>   
         <div class="button latter">Sign up</div>
     </div>
-    <div class="footer">
+    <div class="footer purple">
         <p>Copyright ©︎ The Odin Project 2021</p>
     </div>
 </body>
